Working on chw CODE

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="RSID"> شُرکا کا شناختی نمبر # </string>
     <string name="RS7"> ماں کا موجودہ شناختی آئی ڈی </string>
     <string name="RS8"> ماں کا مستقل شناختی آئی ڈی </string>
+    <string name="num78"> شناختی نمبر </string>
     <string name="RS9"> بچے کا نام </string>
     <string name="RS10"> ماں کا نام </string>
     <string name="RS11"> والد کا نام </string>
