--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,11 +43,33 @@
 
     <string name="Section2"> رضاکارانہ طور پر دیکھ بھال کرنے والا </string>
     <string name="RS17"> ماں یا دیکھ بھال کرنے والے نے مطالعے میں حصہ لینے کے بارے میں مطمئن رضامندی دی ہے </string>
-    <string name="RS18"> رضامندی فراہم نہ کرنے </string>
-    <string name="RS20"> (رضامندی ملنے کی صورت میں) دیکھ بھال کرنے والا / جواب دینے والا شخص کون ہے؟ </string>
-    <string name="RS21"> ماں کیوں جواب دہ نہیں تھی؟ </string>
-    <string name="RS22"> کیا بچہ زندہ ہے </string>
-    <string name="RS23"> بچے کی تاریخ وفات کیا ہے؟ </string>
+    <string name="RS18"> رضامندی فراہم نہ کرنے کی وجہ؟ </string>
+    <string name="RS18a"> دلچسپی نہیں ہے </string>
+    <string name="RS18b"> مصروفیت </string>
+    <string name="RS18c"> مطالعہ کے طریقہ کار سے مطمئن نہیں </string>
+    <string name="RS18d"> کسی بھی وجہ کا ذکر کرنے سے انکار </string>
+    <string name="RS18e"> گھر میں کوئی بھی موجود نہیں </string>
+    <string name="RS18f"> بچے کی نشاندہی نہیں ہوئی </string>
+    <string name="RS19"> (رضامندی ملنے کی صورت میں) دیکھ بھال کرنے والا / جواب دینے والا شخص کون ہے؟ </string>
+    <string name="RS19a"> ماں </string>
+    <string name="RS19b"> دادی </string>
+    <string name="RS19c"> آنٹی </string>
+    <string name="RS19d"> بہن </string>
+    <string name="RS19e"> والد </string>
+    <string name="RS19f"> دادا </string>
+    <string name="RS19g"> انکل </string>
+    <string name="RS19h"> بھائی </string>
+    <string name="RS1996"> دیگر </string>
+    <string name="RS20"> ماں کیوں جواب دہ نہیں تھی؟ </string>
+    <string name="RS20a">  وہ حیات نہیں ہیں </string>
+    <string name="RS20b"> وہ دوسرے شہر منتقل ہوگئی ہے </string>
+    <string name="RS20c"> وہ اس قابل نہیں ہے </string>
+    <string name="RS20d"> مسلسل غیر حاظر ہے </string>
+    <string name="RS2096"> دیگر </string>
+    <string name="RS21"> کیا بچہ زندہ ہے </string>
+    <string name="RS21a">  ہاں، اب بھی زندہ </string>
+    <string name="RS21b">  نہیں، بچہ مر چکا ہے </string>
+    <string name="RS22"> بچے کی تاریخ وفات کیا ہے؟ </string>
 
     <string name="Section3"> گھریلو معلومات </string>
     <string name="RS24"> کتنے عرصے سے آپ اس گھر میں رہ رہے ہیں؟ </string>
