--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
     <string name="RS20d"> مسلسل غیر حاظر ہے </string>
     <string name="RS2096"> دیگر </string>
     <string name="RS21"> کیا بچہ زندہ ہے </string>
-    <string name="RS21a">  ہاں، اب بھی زندہ </string>
+    <string name="RS21a">  ہاں، اب بھی زندہ ہے </string>
     <string name="RS21b">  نہیں، بچہ مر چکا ہے </string>
     <string name="RS22"> بچے کی تاریخ وفات کیا ہے؟ </string>
 
