--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -292,8 +292,8 @@
     <string name="RS58"> کیا پچھلے 12 مہینوں میں کسی بھی وقت سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز)آئی ہے؟ </string>
     <string name="RS59"> پچھلے 12 مہینوں میں گھرگھراہٹ (سینے سے سیٹی کی آواز) کے کتنے واقعات ہوئے ہیں؟ </string>
     <string name="RS60"> پچھلے 12 مہینوں میں ، گھرگھراہٹ (سینے سے سیٹی کی آواز) کی وجہ سے کتنی بار نیند خراب ہوئی ہے </string>
-    <string name="RS60a"> فی ہفتہ ایک رات سے کم </string>
-    <string name="RS60b"> فی ہفتہ ایک یا زیادہ راتیں </string>
+    <string name="RS60a"> ہفتہ ایک رات سے کم </string>
+    <string name="RS60b"> ہفتہ ایک یا زیادہ راتیں </string>
     <string name="RS61"> پچھلے 12 مہینوں میں ، رات میں کھانسی کی وجہ سے کتنی بار نیند میں خلل پڑا ہے ، جب آپ کا بچہ ٹھیک ظاہر ہوتا ہے (یعنی کوئی زُکام یا سینے میں انفکشن نہیں ہوتا ہے) </string>
     <string name="RS61a"> فی ہفتہ ایک رات سے کم </string>
     <string name="RS61b"> فی ہفتہ ایک یا زیادہ راتیں </string>
