--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,12 +337,12 @@
     <string name="RS73"> پچھلے 12 مہینے میں بچے کو بخار ہوا ہے؟ </string>
 
     <string name="section8"> خاندان کی بیماری کے لئے اسکریننگ </string>
-    <string name="RS74"> کیا ماں کو کبھی یہ مثائل ہوئے؟ </string>
+    <string name="RS74"> کیا ماں کو کبھی یہ مسائل ہوئے؟ </string>
     <string name="RS741"> دمہ </string>
     <string name="RS742"> رائینایٹس </string>
     <string name="RS743"> ایکزیما </string>
 
-    <string name="RS75"> کیا والد کو کبھی یہ مثائل ہوئے؟ </string>
+    <string name="RS75"> کیا والد کو کبھی یہ مسائل ہوئے؟ </string>
     <string name="RS751"> دمہ </string>
     <string name="RS752"> رائینایٹس </string>
     <string name="RS753"> ایکزیما </string>
