--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,10 +268,10 @@
     <string name="RS4496"> دیگر </string>
     <string name="RS4497"> پتہ نہیں </string>
 
-    <string name="RS45">4.05: کیا بچا ہسپتال میں داخل ہوا تھا؟ </string>
+    <string name="RS45">4.05: کیا بچہ ہسپتال میں داخل ہوا تھا؟ </string>
     <string name="RS4598"> پتہ نہیں </string>
-    <string name="RS46">4.06: کونسی تاریخ کوبچہ ہسپتال میں داخل ہوا تھا؟ </string>
-    <string name="RS47">4.07: بچا کتنے دن ہسپتال میں رہا تھا؟ </string>
+    <string name="RS46">4.06: کونسی تاریخ کو بچہ ہسپتال میں داخل ہوا تھا؟ </string>
+    <string name="RS47">4.07: بچہ کتنے دن ہسپتال میں رہا تھا؟ </string>
     <string name="RS48">4.08: کیا بچے نے گھر میں کسی دوا کا استعمال کیا؟ </string>
     <string name="RS4898"> پتہ نہیں </string>
 
@@ -281,7 +281,7 @@
     <string name="RS51">5.03: کیا یہ جلد پر خارش کے ساتھ ریش سے جسم کے یہ حصے متاثرہوئے تھے: کہنیوں کے تہہ ، گھٹنوں کے پیچھے ، ٹخنوں کے سامنے ، کولہوں کے نیچے ، یا گردن ، کان یا آنکھوں کے گرد؟ </string>
     <string name="RS52">5.04: پہلی مرتبہ کس عمر میں یہ خارش کے ساتھ ریش ہوئے تھے؟ </string>
     <string name="RS53">5.05: کیا پچھلے 12 مہینے کے دوران یہ خارش کے ساتھ ریش پوری طرح صاف ہوگئے تھے؟ </string>
-    <string name="RS54">5.06: پچھلے 12 مہینوں میں ، کتنی مرتبہ، آپ کا بچا رات کے وقت خارش کی وجہ سے جاگ گیا تھا؟ </string>
+    <string name="RS54">5.06: پچھلے 12 مہینوں میں ، کتنی مرتبہ، آپ کا بچہ رات کے وقت خارش کی وجہ سے جاگ گیا تھا؟ </string>
     <string name="RS54a"> 1 سے 2 مرتبہ </string>
     <string name="RS54b"> 3 سے 5 مرتبہ </string>
     <string name="RS54c"> 5 سے زائد مرتبہ </string>
@@ -891,7 +891,7 @@
     <string name="at15m">     15مهينن جي عمر ۾ </string>
     <string name="pocfgm2"> ۔ميزلس-2 Measels-2 </string>
     <string name="pocfgm2dt"> DD-MM-YYYY </string>
-    <string name="pocfg05">۔C305- کیا بچہ(۔Name) نےکبھی پولیو مہم کے دوران پولیو سے بچاؤ کے قطر ے پیئے ہیں؟ </string>
+    <string name="pocfg05">۔C305- کیا بچہ(۔Name) نےکبھی پولیو مہم کے دوران پولیو سے بچہؤ کے قطر ے پیئے ہیں؟ </string>
     <string name="pocfg06">۔C306- کیابچے (۔Name) کو پچھلی  پولیو مہم میں پولیو کے قطرے پلائے گئے تھے؟</string>
 
     <string name="pocfg07a"> پہلے دو ہفتے </string>
@@ -900,10 +900,10 @@
     <string name="pocfg09">۔C309 - ۔ PENTA۔ کے ٹیکے کتنی دفعہ لگوائے تھے۔ </string>
     <string name="pocfg10"> ۔ C310 - کیا بچے کو PCV کے ٹیکے لگوائے جو کہ انجکشن کی صورت میں ران یا کولہوں میں لگائےجاتے ہیں اور اکثرپولیو کے قطروں کے ساتھ دئے جاتے ہیں </string>
 
-    <string name="pocfg12">  ۔C312- کیابچے (۔Name) کو Measles کا ا نجکشن لگوایا جو خسرہ سے بچاؤ کے لیے ہوتا ہے جو کہ بازو میں 9 مہینے یا اس سے بڑی عمر میں لگایا جاتا ہے </string>
+    <string name="pocfg12">  ۔C312- کیابچے (۔Name) کو Measles کا ا نجکشن لگوایا جو خسرہ سے بچہؤ کے لیے ہوتا ہے جو کہ بازو میں 9 مہینے یا اس سے بڑی عمر میں لگایا جاتا ہے </string>
     <string name="pocfg13">۔C313- ۔ Mesasles۔ کے ٹیکے کتنی دفعہ لگوائے تھے۔ </string>
 
-    <string name="pocfg15">۔C315- کیا بچہ(۔Name) نےکبھی پولیو سے بچاؤ کے قطر ے پیے ہیں </string>
+    <string name="pocfg15">۔C315- کیا بچہ(۔Name) نےکبھی پولیو سے بچہؤ کے قطر ے پیے ہیں </string>
 
     <string name="pocfg03"> روٽين جي ٽڪن کان سواءِ توهان جي ٻار ڪيترا دفعا پوليو جا ڦڙا پيتا آهن </string>
     <string name="pocfg03x"> ڪيترا دفعا </string>
