--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -277,19 +277,19 @@
     <string name="RS4898"> پتہ نہیں </string>
 
     <string name="Section5"> ایٹوپک ڈرمیٹائٹس کے لئے اسکریننگ </string>
-    <string name="RS49">5.01: کیا بچے کو خارش کے ساتھ جلد پر ریش تھے جو کم سے کم 12 ماہ تک آتے جاتے رہے ؟ </string>
-    <string name="RS50">5.02: کیا پچھلے 12 مہینے کے دوران بچے کو خارش کے ساتھ جلد پر ریش ہوئے ہیں </string>
-    <string name="RS51">5.03: کیا یہ جلد پر خارش کے ساتھ ریش سے جسم کے یہ حصے متاثرہوئے تھے: کہنیوں کے تہہ ، گھٹنوں کے پیچھے ، ٹخنوں کے سامنے ، کولہوں کے نیچے ، یا گردن ، کان یا آنکھوں کے گرد؟ </string>
-    <string name="RS52">5.04: پہلی مرتبہ کس عمر میں یہ خارش کے ساتھ ریش ہوئے تھے؟ </string>
-    <string name="RS53">5.05: کیا پچھلے 12 مہینے کے دوران یہ خارش کے ساتھ ریش پوری طرح صاف ہوگئے تھے؟ </string>
-    <string name="RS54">5.06: پچھلے 12 مہینوں میں ، کتنی مرتبہ، آپ کا بچہ رات کے وقت خارش کی وجہ سے جاگ گیا تھا؟ </string>
+    <string name="RS49">5.01: کیا کبھی بھی بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے  تھے جو کم سے کم 12 ماہ تک آتے جاتے رہے ؟ </string>
+    <string name="RS50">5.02: کیا پچھلے 12 مہینے کے دوران بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے ہیں؟  </string>
+    <string name="RS51">5.03: کیا یہ جلد پر خارش کے ساتھ سُرخ داغ یا دانے سے جسم کے یہ حصے متاثرہوئے تھے: کہنیوں کے تہہ ، گھٹنوں کے پیچھے ، ٹخنوں کے سامنے ، کولہوں کے نیچے ، یا گردن ، کان یا آنکھوں کے گرد؟  </string>
+    <string name="RS52">5.04: پہلی مرتبہ کس عمر میں یہ خارش کے ساتھ سُرخ داغ یا دانے ہوئے تھے؟  </string>
+    <string name="RS53">5.05: کیا پچھلے 12 مہینے کے دوران یہ خارش کے ساتھ سُرخ داغ یا دانے پوری طرح صاف ہوگئے تھے؟ </string>
+    <string name="RS54">5.06: پچھلے 12 مہینوں میں ، کتنی مرتبہ، آپ کا بچا رات کے وقت جلد پر خارش کی وجہ سے جاگ گیا تھا؟ </string>
     <string name="RS54a"> 1 سے 2 مرتبہ </string>
     <string name="RS54b"> 3 سے 5 مرتبہ </string>
     <string name="RS54c"> 5 سے زائد مرتبہ </string>
-    <string name="RS55">5.07: کیا آپکے بچے کو کبھی ایکزیما ہوا تھا؟ </string>
-    <string name="RS56">5.08: گزشتہ 12 مہینوں کے دوران آپ کے بچے کو ایکزیما ہوا ہے؟ </string>
+    <string name="RS55">5.07: کیا آپکے بچے کو کبھی ایکزیما (خارش کے ساتھ سُرخ داغ یا دانے) ہوا تھا ؟ </string>
+    <string name="RS56">5.08: گزشتہ 12 مہینوں کے دوران آپ کے بچے کو ایکزیما (خارش کے ساتھ سُرخ داغ یا دانے) ہوا ہے ؟ </string>
 
-    <string name="section6"> 6 - دمہ کے لئے اسکریننگ  (دمہ اور پہاڑی کی ویڈیو دکھائیں) </string>
+    <string name="section6"> 6 - دمہ کے لئے اسکریننگ  (دمہ اور سینے سے سیٹی کی آواز کی ویڈیو دکھائیں) </string>
     <string name="RS57">6.01: کیا ماضی میں کسی بھی وقت بچے کے سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
     <string name="RS58">6.02: کیا پچھلے 12 مہینوں میں کسی بھی وقت سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز)آئی ہے؟ </string>
     <string name="RS59">6.03: پچھلے 12 مہینوں میں گھرگھراہٹ (سینے سے سیٹی کی آواز) کے کتنے واقعات ہوئے ہیں؟ </string>
@@ -310,13 +310,13 @@
     <string name="RS66">6.10: پچھلے 12 مہینوں میں ، کیا اس سردی یا سینے میں انفیکشن سے وابستہ کھانسی کے علاوہ بھی ، بچے کو رات کو خشک کھانسی ہوئی ہے؟ </string>
 
     <string name="section7"> راینائیٹس کے لئے اسکریننگ </string>
-    <string name="RS67">7.01: جب سردی یا فلو نہیں ہے تو کیا آپ کے بچے کو چھینکنے یا ناک بند ہونے/ بہنے سے کبھی تکلیف ہوئی ہے؟ </string>
-    <string name="RS68">7.02: پچھلے 12 مہینوں میں ، جب آپ کو نزلہ یا فلو نہیں تھا ، تو کیا بچے کو چھینک ، یا ناک بند ہونے سے مسئلہ ہوا تھا؟ </string>
+    <string name="RS67">7.01: جب سردی یا زُکام نہیں تھا تو کیا کبھی آپ کے بچے کو چھینکنے یا ناک بند ہونے/ بہنے سے تکلیف ہوئی ہے ؟ </string>
+    <string name="RS68">7.02: پچھلے 12 مہینوں میں، جب سردی یا زُکام نہیں تھا ، تو بچے کو چھینکنے ، یا ناک بند ہونے سے کتنی بار مسئلہ ہوا ؟ </string>
     <string name="RS68a"> 1 سے 2 مرتبہ </string>
     <string name="RS68b"> 3 سے 5 مرتبہ </string>
     <string name="RS68c"> 5 سے زائد مرتبہ </string>
-    <string name="RS69">7.03: پچھلے 12 مہینوں میں ، کیا آنکھوں میں خارش کے ساتھ اس ناک کی تکلیف کا سامنا کرنا پڑا ہے؟ </string>
-    <string name="RS70">7.04: پچھلے 12 ماہ کے دوران ناک کی تکلیف ہوئی؟ </string>
+    <string name="RS69">7.03: پچھلے 12 مہینوں میں، کیا ناک کی تکلیف کے ساتھ آنکھوں میں خارش ہوئی تھی ؟ </string>
+    <string name="RS70">7.04: پچھلے 12 ماہ میں کِن مہینوں کے دوران ناک کی تکلیف ہوئی؟  </string>
     <string name="RS70a"> جنوری </string>
     <string name="RS70b"> فروری </string>
     <string name="RS70c"> مارچ </string>
@@ -338,12 +338,12 @@
     <string name="RS73">7.07: پچھلے 12 مہینے میں بچے کو بخار ہوا ہے؟ </string>
 
     <string name="section8"> خاندان کی بیماری کے لئے اسکریننگ </string>
-    <string name="RS74">8.01: کیا ماں کو کبھی یہ مثائل ہوئے؟ </string>
+    <string name="RS74">8.01: کیا ماں کو کبھی یہ مسائل ہوئے ؟ </string>
     <string name="RS741"> دمہ </string>
     <string name="RS742"> رائینایٹس </string>
     <string name="RS743"> ایکزیما </string>
 
-    <string name="RS75">8.02: کیا والد کو کبھی یہ مثائل ہوئے؟ </string>
+    <string name="RS75">8.02: کیا والد کو کبھی یہ مسائل ہوئے ؟ </string>
     <string name="RS751"> دمہ </string>
     <string name="RS752"> رائینایٹس </string>
     <string name="RS753"> ایکزیما </string>
@@ -369,6 +369,7 @@
     <string name="RS78">9.03: آپ کے بچے کو کون سی غذا سے الرجی ہے؟ </string>
     <string name="RS79">9.04: برائے مہربانی ھیلتھ کارڈ تحقیقی کارکن کے حوالے کر دیں </string>
     <string name="RS80">10.01: انٹرویو کا اختتام ہوگیا؟ </string>
+    <string name="RS82">10.03: اگلے دورے کی تاریخ </string>
     <!--End RSV Study Strings-->
 
     <string name="end_interview"> اختتام </string>
@@ -711,14 +712,14 @@
     <string name="pocfc12"> آ خري وامي اسڪور </string>
 
 
-    <string name="istatus"> انٽرويو جو نتيجو </string>
-    <string name="istatus1"> مڪمل ٿيو </string>
-    <string name="istatus2"> انڪار ڪيو </string>
-    <string name="istatus3"> گھر مستقل طور بند آھي </string>
-    <string name="istatus4"> گھر عارضي طور بند آھي </string>
-    <string name="istatus5"> رڪيل </string>
-    <string name="istatus6"> گھر خالي ھو </string>
-    <string name="istatus7"> مڪمل نه ٿيو </string>
+    <string name="istatus"> انٹرویو کا نتیجہ </string>
+    <string name="istatus1"> مکمل </string>
+    <string name="istatus2"> انکار کر دیا </string>
+    <string name="istatus3"> گھر مستقل طور پر بند ہے </string>
+    <string name="istatus4"> گھر عارضی طور پر بند ہے </string>
+    <string name="istatus5"> نامکمل </string>
+    <string name="istatus6"> گھر پر کوئی نہیں تھا </string>
+    <string name="istatus7"> مکمل نہیں ہوسکا </string>
 
     <string name="pocfd"> سيڪشن 04.ھٿ ڌوئڻ </string>
     <string name="pocfd01"> ڇا توهان ھٿ ڌوئڻ لاءِ صابڻ يا پائوڊر / صرف استعمال ڪندا آهيو </string>
