--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,7 @@
     <string name="RS12">1.16 گھر کے سربراہ کا نام </string>
     <string name="RS13"> بچے کی تاریخِ پیدایش </string>
     <string name="RS14"> بچے کی عمر (مہینے) </string>
+    <string name="RS15"> وِزِٹ کی تاریخ </string>
 
     <string name="Section2"> رضاکارانہ طور پر دیکھ بھال کرنے والا </string>
     <string name="RS17">2.01: ماں یا دیکھ بھال کرنے والے نے مطالعے میں حصہ لینے کے بارے میں مطمئن رضامندی دی ہے </string>
