--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,6 +44,10 @@
     <string name="RS13"> بچے کی تاریخِ پیدایش </string>
     <string name="RS14"> بچے کی عمر (مہینے) </string>
     <string name="RS15"> وِزِٹ کی تاریخ </string>
+    <string name="RS16"> کیا گھر اور بچے کی شناخت ہوگئی ہے؟ </string>
+    <string name="RS16a"> ہاں گھر اور بچے کی شناخت ہوگی ہے </string>
+    <string name="RS16b">   نہیں گھر پر کوئی موجود نہیں ہے    </string>
+    <string name="RS16c"> گھر  تبدیل کر لیا گیا ہے  </string>
 
     <string name="Section2"> رضاکارانہ طور پر دیکھ بھال کرنے والا </string>
     <string name="RS17">2.01: ماں یا دیکھ بھال کرنے والے نے مطالعے میں حصہ لینے کے بارے میں مطمئن رضامندی دی ہے </string>
