fixed RSF30 variable names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -294,8 +294,8 @@
     <string name="RS60a"> ہفتہ ایک رات سے کم </string>
     <string name="RS60b"> ہفتہ ایک یا زیادہ راتیں </string>
     <string name="RS61">6.05: پچھلے 12 مہینوں میں ، رات میں کھانسی کی وجہ سے کتنی بار نیند میں خلل پڑا ہے ، جب آپ کا بچہ ٹھیک ظاہر ہوتا ہے (یعنی کوئی زُکام یا سینے میں انفکشن نہیں ہوتا ہے) </string>
-    <string name="RS61a"> فی ہفتہ ایک رات سے کم </string>
-    <string name="RS61b"> فی ہفتہ ایک یا زیادہ راتیں </string>
+    <string name="RS61a"> ہفتہ ایک رات سے کم </string>
+    <string name="RS61b"> ہفتہ ایک یا زیادہ راتیں </string>
     <string name="RS62">6.06: پچھلے 12 مہینوں میں ، گھرگھراھٹ کبھی اتنی شدید ہوئی کہ بولنے یا رونے کی آواز کو محدود کردے؟ </string>
     <string name="RS63">6.07: کیا کبھی بچے کو دمہ کی تشخیص ہوئی ہے؟ </string>
     <string name="RS64">6.08: دمہ کی تشخیص کس نے کی؟ </string>
