--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -274,99 +274,125 @@
 
     <string name="Section5"> ایٹوپک ڈرمیٹائٹس کے لئے اسکریننگ </string>
     <string name="RS49">5.01: کیا کبھی بھی بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے  تھے جو کم سے کم 12 ماہ تک آتے جاتے رہے ؟ </string>
-    <string name="RS50">5.02: کیا پچھلے 12 مہینے کے دوران بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے ہیں؟  </string>
-    <string name="RS51">5.03: کیا یہ جلد پر خارش کے ساتھ سُرخ داغ یا دانے سے جسم کے یہ حصے متاثرہوئے تھے: کہنیوں کے تہہ ، گھٹنوں کے پیچھے ، ٹخنوں کے سامنے ، کولہوں کے نیچے ، یا گردن ، کان یا آنکھوں کے گرد؟  </string>
+    <string name="RS50">کیا پچھلے 6مہینے کے دوران بچے کو خارش کے ساتھ جلد پر سُرخ داغ یا دانے ہوئے ہیں؟ </string>
+    <string name="RS51"> کیا یہ جلد پر خارش کے ساتھ سُرخ داغ یا دانے سے جسم کے یہ حصے متاثرہوئے تھے: کہنیوں کے تہہ ، گھٹنوں کے پیچھے ، ٹخنوں کے سامنے ، کولہوں کے نیچے ، یا گردن ، کان یا آنکھوں کے گرد؟  </string>
     <string name="RS52">5.04: پہلی مرتبہ کس عمر میں یہ خارش کے ساتھ سُرخ داغ یا دانے ہوئے تھے؟  </string>
-    <string name="RS53">5.05: کیا پچھلے 12 مہینے کے دوران یہ خارش کے ساتھ سُرخ داغ یا دانے پوری طرح صاف ہوگئے تھے؟ </string>
-    <string name="RS54">5.06: پچھلے 12 مہینوں میں ، کتنی مرتبہ، آپ کا بچہ رات کے وقت جلد پر خارش کی وجہ سے جاگ گیا تھا؟ </string>
+    <string name="RS53">کیا پچھلے 6 مہینے کے دوران یہ خارش
+کے ساتھ سُرخ داغ یا دانے پوری طرح
+صاف ہوگئے تھے؟</string>
+    <string name="RS54">پچھلے 6 مہینوں میں ، کتنی مرتبہ، آپ کا
+بچہ رات کے وقت جلد پر خارش کی وجہ
+سے جاگ گیا تھا؟</string>
     <string name="RS54a"> 1 سے 2 مرتبہ </string>
     <string name="RS54b"> 3 سے 5 مرتبہ </string>
     <string name="RS54c"> 5 سے زائد مرتبہ </string>
-    <string name="RS55">5.07: کیا آپکے بچے کو کبھی ایکزیما (خارش کے ساتھ سُرخ داغ یا دانے) ہوا تھا ؟ </string>
+    <string name="RS55">کیا آپکے بچے کو کبھی ایکزیما (خارش کے ساتھ سُرخ داغ یا دانے) ہوا تھا ؟ </string>
     <string name="RS56">5.08: گزشتہ 12 مہینوں کے دوران آپ کے بچے کو ایکزیما (خارش کے ساتھ سُرخ داغ یا دانے) ہوا ہے ؟ </string>
 
     <string name="section6"> 6.0) دمہ کے لئے اسکریننگ</string>
     <string name="section6sub">(دمہ اور سینے سے سیٹی کی آواز کی ویڈیو دکھائیں)</string>
     <string name="RS57">6.01: کیا ماضی میں کسی بھی وقت بچے کے سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
-    <string name="RS58">6.02: کیا پچھلے 12 مہینوں میں کسی بھی وقت سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز)آئی ہے؟ </string>
-    <string name="RS59">6.03: پچھلے 12 مہینوں میں گھرگھراہٹ (سینے سے سیٹی کی آواز) کے کتنے واقعات ہوئے ہیں؟ </string>
-    <string name="RS60">6.04: پچھلے 12 مہینوں میں ، گھرگھراہٹ (سینے سے سیٹی کی آواز) کی وجہ سے کتنی بار نیند خراب ہوئی ہے </string>
+    <string name="RS58">6.02: کیا پچھلے 06 مہینوں میں کسی بھی وقت سینے میں گھرگھراہٹ (سینے سے سیٹی کی آواز)آئی ہے؟ </string>
+    <string name="RS59">6.03: پچھلے 06 مہینوں میں گھرگھراہٹ (سینے سے سیٹی کی آواز) کے کتنے واقعات ہوئے ہیں؟ </string>
+    <string name="RS60">6.04: پچھلے 06 مہینوں میں ، گھرگھراہٹ (سینے سے سیٹی کی آواز) کی وجہ سے کتنی بار نیند خراب ہوئی ہے </string>
     <string name="RS60a"> ہفتہ ایک رات سے کم </string>
     <string name="RS60b"> ہفتہ ایک یا زیادہ راتیں </string>
-    <string name="RS61">6.05: پچھلے 12 مہینوں میں ، رات میں کھانسی کی وجہ سے کتنی بار نیند میں خلل پڑا ہے ، جب آپ کا بچہ ٹھیک ظاہر ہوتا ہے (یعنی کوئی زُکام یا سینے میں انفکشن نہیں ہوتا ہے) </string>
+    <string name="RS61">6.05: پچھلے 06 مہینوں میں ، رات میں کھانسی کی وجہ سے کتنی بار نیند میں خلل پڑا ہے ، جب آپ کا بچہ ٹھیک ظاہر ہوتا ہے (یعنی کوئی زُکام یا سینے میں انفکشن نہیں ہوتا ہے) </string>
     <string name="RS61a"> ہفتہ ایک رات سے کم </string>
     <string name="RS61b"> ہفتہ ایک یا زیادہ راتیں </string>
-    <string name="RS62">6.06: پچھلے 12 مہینوں میں ، گھرگھراھٹ کبھی اتنی شدید ہوئی کہ بولنے یا رونے کی آواز کو محدود کردے؟ </string>
+    <string name="RS62">6.06: پچھلے 06 مہینوں میں ، گھرگھراھٹ کبھی اتنی شدید ہوئی کہ بولنے یا رونے کی آواز کو محدود کردے؟ </string>
     <string name="RS63">6.07: کیا کبھی بچے کو دمہ کی تشخیص ہوئی ہے؟ </string>
     <string name="RS64">6.08: دمہ کی تشخیص کس نے کی؟ </string>
     <string name="RS64a"> ڈاکٹر </string>
     <string name="RS64b"> پیرا میڈیک </string>
     <string name="RS64c"> نرس </string>
     <string name="RS6496"> کوئی اور </string>
-    <string name="RS65">6.09: پچھلے 12 مہینوں میں ، کیا آپ کے بچے کو ورزش کے دوران یا اس کے بعد خشک کھانسی ہوئی ہے (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
-    <string name="RS66">6.10: پچھلے 12 مہینوں میں ، کیا اس سردی یا سینے میں انفیکشن سے وابستہ کھانسی کے علاوہ بھی ، بچے کو رات کو خشک کھانسی ہوئی ہے؟ </string>
+    <string name="RS65">6.09: پچھلے 06 مہینوں میں ، کیا آپ کے بچے کو ورزش کے دوران یا اس کے بعد خشک کھانسی ہوئی ہے (سینے سے سیٹی کی آواز) آئی ہے؟ </string>
+    <string name="RS66">6.10: پچھلے 06 مہینوں میں ، کیا اس سردی یا سینے میں انفیکشن سے وابستہ کھانسی کے علاوہ بھی ، بچے کو رات کو خشک کھانسی ہوئی ہے؟ </string>
+    <string name="RS67">پچھلے چھ ماہ میں ، آپ کے بچے نے
+دمہ اور سانس لینے میں دشواریوں کے
+سبب کتنی بار صحت کی سہولیات کا دورہ
+کیا؟</string>
+    <string name="RS68">پچھلے چھ ماہ میں ، آپ کے بچے نے
+دمہ اور سانس لینے میں دشواریوں کے
+سبب کتنی بار صحت کی سہولیات کا دورہ
+کیا؟</string>
+    <string name="RS69">کیا علامات کو کنٹرول کرنے کے لئے
+کسی دوا کا استعمال کیا ہے؟</string>
+    <string name="RS70">دمہ کو کنٹرول کرنے کے لئے استعمال
+ہونے والی دوائیں</string>
 
     <string name="section7"> راینائیٹس کے لئے اسکریننگ </string>
-    <string name="RS67">7.01: جب سردی یا زُکام نہیں تھا تو کیا کبھی آپ کے بچے کو چھینکنے یا ناک بند ہونے/ بہنے سے تکلیف ہوئی ہے ؟ </string>
-    <string name="RS68">7.02: پچھلے 12 مہینوں میں، جب سردی یا زُکام نہیں تھا ، تو بچے کو چھینکنے ، یا ناک بند ہونے سے کتنی بار مسئلہ ہوا ؟ </string>
-    <string name="RS68a"> 1 سے 2 مرتبہ </string>
-    <string name="RS68b"> 3 سے 5 مرتبہ </string>
-    <string name="RS68c"> 5 سے زائد مرتبہ </string>
-    <string name="RS69">7.03: پچھلے 12 مہینوں میں، کیا ناک کی تکلیف کے ساتھ آنکھوں میں خارش ہوئی تھی ؟ </string>
-    <string name="RS70">7.04: پچھلے 12 ماہ میں کِن مہینوں کے دوران ناک کی تکلیف ہوئی؟  </string>
-    <string name="RS70a"> جنوری </string>
-    <string name="RS70b"> فروری </string>
-    <string name="RS70c"> مارچ </string>
-    <string name="RS70d"> اپریل </string>
-    <string name="RS70e"> مئی </string>
-    <string name="RS70f"> جون </string>
-    <string name="RS70g"> جولائی </string>
-    <string name="RS70h"> اگست </string>
-    <string name="RS70i"> ستمبر </string>
-    <string name="RS70j"> اکتوبر </string>
-    <string name="RS70k"> نومبر </string>
-    <string name="RS70l"> دسمبر </string>
-    <string name="RS71">7.05: پچھلے 12 مہینوں میں ، ناک کی اس پریشانی نے آپ کے بچے کی روز مرہ کی سرگرمیوں میں کتنا مداخلت کی ہے؟ </string>
-    <string name="RS71a"> کوئی پریشانی نہیں </string>
-    <string name="RS71b"> کم سے کم پریشانی </string>
-    <string name="RS71c"> درمیانی پریشانی </string>
-    <string name="RS71d"> شدید پریشانی  </string>
-    <string name="RS72">7.06: کیا بچے کو کبھی بخار ہوا ہے؟ </string>
-    <string name="RS73">7.07: پچھلے 12 مہینے میں بچے کو بخار ہوا ہے؟ </string>
+    <string name="RS71">7.01: جب سردی یا زُکام نہیں تھا تو کیا کبھی آپ کے بچے کو چھینکنے یا ناک بند ہونے/ بہنے سے تکلیف ہوئی ہے ؟ </string>
+    <string name="RS72">7.02: پچھلے 06 مہینوں میں، جب سردی یا زُکام نہیں تھا ، تو بچے کو چھینکنے ، یا ناک بند ہونے سے کتنی بار مسئلہ ہوا ؟ </string>
+    <string name="RS72a"> 1 سے 2 مرتبہ </string>
+    <string name="RS72b"> 3 سے 5 مرتبہ </string>
+    <string name="RS72c"> 5 سے زائد مرتبہ </string>
+    <string name="RS73">7.03: پچھلے 06 مہینوں میں، کیا ناک کی تکلیف کے ساتھ آنکھوں میں خارش ہوئی تھی ؟ </string>
+    <string name="RS74">7.04: پچھلے 06 ماہ میں کِن مہینوں کے دوران ناک کی تکلیف ہوئی؟  </string>
+    <string name="RS74a"> جنوری </string>
+    <string name="RS74b"> فروری </string>
+    <string name="RS74c"> مارچ </string>
+    <string name="RS74d"> اپریل </string>
+    <string name="RS74e"> مئی </string>
+    <string name="RS74f"> جون </string>
+    <string name="RS74g"> جولائی </string>
+    <string name="RS74h"> اگست </string>
+    <string name="RS74i"> ستمبر </string>
+    <string name="RS74j"> اکتوبر </string>
+    <string name="RS74k"> نومبر </string>
+    <string name="RS74l"> دسمبر </string>
+    <string name="RS75">7.05: پچھلے 06 مہینوں میں ، ناک کی اس پریشانی نے آپ کے بچے کی روز مرہ کی سرگرمیوں میں کتنا مداخلت کی ہے؟ </string>
+    <string name="RS75a"> کوئی پریشانی نہیں </string>
+    <string name="RS75b"> کم سے کم پریشانی </string>
+    <string name="RS75c"> درمیانی پریشانی </string>
+    <string name="RS75d"> شدید پریشانی  </string>
+    <string name="RS76">7.06: کیا بچے کو کبھی بخار ہوا ہے؟ </string>
+    <string name="RS77">7.07: پچھلے 06 مہینے میں بچے کو بخار ہوا ہے؟ </string>
 
     <string name="section8"> خاندان کی بیماری کے لئے اسکریننگ </string>
-    <string name="RS74">8.01: کیا ماں کو کبھی یہ مسائل ہوئے ؟ </string>
-    <string name="RS741"> دمہ </string>
-    <string name="RS742">رائینایٹس (ناک کی سوزش)  </string>
-    <string name="RS743"> ایکزیما (جلد پر سُرخ داغ اور خارش) </string>
+    <string name="RS78">8.01: کیا ماں کو کبھی یہ مسائل ہوئے ؟ </string>
+    <string name="RS781"> دمہ </string>
+    <string name="RS782">رائینایٹس (ناک کی سوزش)  </string>
+    <string name="RS783"> ایکزیما (جلد پر سُرخ داغ اور خارش) </string>
 
-    <string name="RS75">8.02: کیا والد کو کبھی یہ مسائل ہوئے ؟ </string>
-    <string name="RS751"> دمہ </string>
-    <string name="RS752"> رائینایٹس (ناک کی سوزش) </string>
-    <string name="RS753"> ایکزیما (جلد پر سُرخ داغ اور خارش) </string>
+    <string name="RS79">8.02: کیا والد کو کبھی یہ مسائل ہوئے ؟ </string>
+    <string name="RS791"> دمہ </string>
+    <string name="RS792"> رائینایٹس (ناک کی سوزش) </string>
+    <string name="RS793"> ایکزیما (جلد پر سُرخ داغ اور خارش) </string>
 
 
     <string name="Section9"> پیش قدمی عوامل </string>
-    <string name="RS76">9.01: اِن میں سے کِن چیزوں کی وجہ سے آپکے بچے کو سانس لینے کی مشکلات میں مذید اضافہ ہوتا ہے؟ </string>
-    <string name="RS761"> ورزش </string>
-    <string name="RS762"> انفیکشن </string>
-    <string name="RS763"> جذبات۔ (رونا / ہنسنا) </string>
-    <string name="RS764"> سیزن / موسم </string>
-    <string name="RS765"> دھواں </string>
-    <string name="RS766"> ماحولیاتی آلودگی </string>
-    <string name="RS767"> گھریلو دھول </string>
-    <string name="RS768"> سرد موسم </string>
-    <string name="RS769"> جرگ (پولن) </string>
-    <string name="RS7610"> پنکھ / پَر </string>
-    <string name="RS7611"> گھاس </string>
-    <string name="RS7612"> کچھ اور </string>
+    <string name="RS80">9.01: اِن میں سے کِن چیزوں کی وجہ سے آپکے بچے کو سانس لینے کی مشکلات میں مذید اضافہ ہوتا ہے؟ </string>
+    <string name="RS801"> ورزش </string>
+    <string name="RS802"> انفیکشن </string>
+    <string name="RS803"> جذبات۔ (رونا / ہنسنا) </string>
+    <string name="RS804"> سیزن / موسم </string>
+    <string name="RS805"> دھواں </string>
+    <string name="RS806"> ماحولیاتی آلودگی </string>
+    <string name="RS807"> گھریلو دھول </string>
+    <string name="RS808"> سرد موسم </string>
+    <string name="RS809"> جرگ (پولن) </string>
+    <string name="RS8010"> پنکھ / پَر </string>
+    <string name="RS8011"> گھاس </string>
+    <string name="RS8012"> کچھ اور </string>
 
     <string name="Section92"> 2 پیش قدمی عوامل </string>
-    <string name="RS77">9.02: کیا آپ کے بچے کو کسی غذا سے الرجی ہے؟ </string>
-    <string name="RS78">9.03: آپ کے بچے کو کون سی غذا سے الرجی ہے؟ </string>
-    <string name="RS79">9.04: برائے مہربانی تصدیق کریں کہ آپ نے ھیلتھ کارڈ بچے کی ماں یا رضامندی دینے والے شخص کے حوالے کر دیا ہے۔ </string>
-    <string name="RS80">10.01: انٹرویو کا اختتام ہوگیا؟ </string>
-    <string name="RS82">10.03: اگلے دورے کی تاریخ </string>
+    <string name="RS81">9.02: کیا آپ کے بچے کو کسی غذا سے الرجی ہے؟ </string>
+    <string name="RS82">9.03: آپ کے بچے کو کون سی غذا سے الرجی ہے؟ </string>
+    <string name="RS83">کیا آپ کے بچے کو پچھلے چھ مہینوں
+میں ایکزیما ہوا ہے؟ )جلد پر سُرخ داغ اور
+خارش(</string>
+    <string name="RS84">ایکزیما کس جگہ ہوا تھا؟</string>
+    <string name="RS84a">چہرہ</string>
+    <string name="RS84b">گردن</string>
+    <string name="RS84c">کوہنیوں</string>
+    <string name="RS84d">کلائی</string>
+    <string name="RS84e">کرب</string>
+    <string name="RS84f">گھٹنوں</string>
+    <string name="RS84g">ٹخنوں</string>
+    <string name="RS85">کیا ہیلتھ کا خیال رکھنے والے نے ہیلتھ
+کارڈ دکھایا؟</string>
     <!--End RSV Study Strings-->
 
     <string name="end_interview"> اختتام </string>
